--- a/css/styles.css
+++ b/css/styles.css
@@ -5,16 +5,22 @@ body {
 }
 
 h1 {
-    margin-top: 0;
+    color: #66BFBF;
     font-family: 'Sacramento', cursive;
+    font-size: 5.625rem;
+    margin-top: 0;
+    margin-bottom: calc(3%);
 }
 
 h2 {
+    color: #66BFBF;
     font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
 }
 
-h3 {
+h3, {
     font-family: 'Montserrat', sans-serif;
+    color: #11999E;
 }
 
 .top-container {
@@ -37,10 +43,39 @@ h3 {
 
 .bottom-cloud {
     position: absolute;
+    right: calc(70%);
+    padding-top: 20px;
 }
 
 .top-cloud {
     position: absolute;
-    right: 300px;
+    left: calc(70%);
     top: 50px;
+
+}
+
+
+.color1 {
+    color: #0779e4
+}
+
+.color2 {
+    color: #4cbbb9
+}
+
+.color3 {
+    color: #77d8d8
+}
+
+.color4 {
+    color: #eff3c6
+}
+
+
+.profilePic {
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    right: calc(80%);
+
 }
